# django_llm

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  MANIFEST.in  README.md  cursor.toml  debug_test.py  dict_test.py  direct_test.py  inspect_test.py  justfile  minimal_test.py  pyproject.toml  pytest.ini  ruff.toml  test_contextual.py  test_improved_errors.py  test_with_imports.py  what's_the_point.md
.github/workflows/: lint.yml  publish.yml  test.yml
dev_env/: start_dev.sh
src/: manage.py
src/config/: asgi.py  wsgi.py
src/config/settings/: base.py  local.py
src/django_llm/: __init__.py  admin.py  apps.py  chains.py  conf.py  django_tools.py  interfaces.py  mixins.py  models.py
src/django_llm/management/: __init__.py
src/django_llm/management/commands/: check_redis.py
src/django_llm/migrations/: 0001_initial.py
src/django_llm/models/: __init__.py  base.py  llmaestro.py  model_discovery.py  model_generator.py  models.py
src/django_llm/orchestration/: __init__.py  django_orchestrator.py  model_mapper.py
src/django_llm/prompt2model/: converter.py  model_inspector.py
src/django_llm/prompt2model/converters/: base.py  factory.py
src/django_llm/prompt2model/prompts/: model_converter.yaml  simple_model_converter.yaml
src/django_llm/static/js/: chain-monitor.js  frontend_example.js
src/django_llm/utils/: redis_checker.py
src/django_llm/websocket/: README.md  consumers.py  mixins.py  routing.py
tests/: client.py  conftest.py  factories.py  mixins.py  settings.py  test_chain_execution.py  test_chain_step.py  test_integration.py  test_llm_provider.py  test_performance.py  test_stored_artifact.py  test_token_usage.py
tests/django_llm/models/: models.py
