[tool.poetry]
name = "django-llm"
version = "0.1.0"
description = "A django package that enables connection to LLMs and storage of artifacts and responses"
authors = ["Lucas Whipple <lucas.whipple@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_llm", from = "src"}]
homepage = "https://github.com/yourusername/django-llm"
repository = "https://github.com/yourusername/django-llm"
keywords = ["django", "llm", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
DJANGO_SETTINGS_MODULE = "tests.settings"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
pydantic2django = {path = "submodules/pydantic2django", develop = true}
llmaestro = {path = "submodules/llmaestro", develop = true}
psycopg2 = "^2.9.10"
channels = "^4.2.0"
channels-redis = "^4.2.1"
sqlalchemy = "^2.0.0"
aiofiles = "^24.1.0"
torch = "^2.2.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "1.11.2 " # https://github.com/python/mypy
django-stubs = "5.1.0 " # https://github.com/typeddjango/django-stubs
pytest = "8.3.3 " # https://github.com/pytest-dev/pytest
pytest-sugar = "1.0.0 " # https://github.com/Frozenball/pytest-sugar
djangorestframework-stubs = "3.15.1 " # https://github.com/typeddjango/djangorestframework-stubs
pytest-timeout = "^2.3.1"
django-coverage-plugin = "3.1.0 " # https://github.com/nedbat/django_coverage_plugin
pytest-django = "4.9.0 " # https://github.com/pytest-dev/pytest-django
pytest-cov = "^6.0.0"
factory-boy = "^3.3.1"
model-bakery = "^1.20.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8 " # https://github.com/astral-sh/ruff
coverage = "^7.6.1 " # https://github.com/nedbat/coveragepy
djlint = "^1.35.2 " # https://github.com/Riverside-Healthcare/djLint
pre-commit = "^4.1.0"
django-debug-toolbar = "^4.4.6 " # https://github.com/jazzband/django-debug-toolbar
detect-secrets = "^1.5.0"
yamllint = "^1.35.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
